ecoupon/templates/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 4
  strategy:
    rollingUpdate:
      maxSurge: 0         
      maxUnavailable: 1   
    type: RollingUpdate   
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: nikeshkamble25/ecoupon-backend
          ports:
            - containerPort: 5000
